--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "next": "^16.0.0",
     "react": "18.2.0",
