feat: migrate authentication and data management from Directus to Supabase; refactor store and query hooks for Supabase integration; update product, customer, and sale CRUD logic; enhance optimistic UI updates and error handling; improve Sidebar and LoginPage for Supabase user/session state

--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "@directus/sdk": "^20.1.0",
+    "@supabase/supabase-js": "^2.44.4",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
-    "@tanstack/react-query-persist-client": "^5.90.7",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
-    "idb-keyval": "^6.2.2",
+    "dotenv": "^17.2.3",
     "next": "^16.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
