--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "lodash": "^4.17.21",
     "next": "^16.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
