--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
     "axios": "^1.12.2",
+    "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "lodash": "^4.17.21",
     "next": "^16.0.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "18.2.0",
     "tailwind-merge": "^3.3.1",
     "zustand": "4.4.0"
