--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
     "axios": "^1.12.2",
+    "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
@@ -21,6 +22,7 @@
     "react-chartjs-2": "^5.3.1",
     "react-dom": "18.2.0",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^13.0.0",
     "zustand": "4.4.0"
   }
 }
