--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "lodash": "^4.17.21",
     "next": "^16.0.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.3.1",
+    "react-day-picker": "^9.11.1",
     "react-dom": "18.2.0",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
