--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
+    "currency.js": "^2.0.4",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "lodash": "^4.17.21",
