--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@supabase/supabase-js": "^2.44.4",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
-    "@vercel/speed-insights": "^1.2.0",
+    "@vercel/speed-insights": "^1.3.1",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.1",
@@ -20,11 +20,11 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "lodash": "^4.17.21",
-    "next": "^16.0.0",
-    "react": "18.2.0",
+    "next": "16.0.7",
+    "react": "19.2.1",
     "react-chartjs-2": "^5.3.1",
     "react-day-picker": "^9.11.1",
-    "react-dom": "18.2.0",
+    "react-dom": "19.2.1",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
     "zustand": "4.4.0"
