--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "currency.js": "^2.0.4",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
+    "eslint-config-next": "^16.0.7",
     "lodash": "^4.17.21",
-    "next": "16.0.7",
-    "react": "19.2.1",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
     "react-chartjs-2": "^5.3.1",
     "react-day-picker": "^9.11.1",
-    "react-dom": "19.2.1",
+    "react-dom": "^19.2.1",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
     "zustand": "4.4.0"
