--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ npm-debug.log
 .idea/
 .vscode/
 
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
