--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "zustand": "4.4.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
+    "@types/node": "^25.0.1",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0"
   }
