--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-chartjs-2": "^5.3.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.1",
+    "react-zxing": "^1.1.3",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
     "zustand": "4.4.0"
